; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_utf8.c_utf8_encoded_to_unichar.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_utf8.c_utf8_encoded_to_unichar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @utf8_encoded_to_unichar(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @assert(i8* %9)
  %11 = load i8*, i8** %4, align 8
  %12 = getelementptr inbounds i8, i8* %11, i64 0
  %13 = load i8, i8* %12, align 1
  %14 = call i64 @utf8_encoded_expected_len(i8 signext %13)
  store i64 %14, i64* %7, align 8
  %15 = load i64, i64* %7, align 8
  switch i64 %15, label %52 [
    i64 1, label %16
    i64 2, label %22
    i64 3, label %28
    i64 4, label %34
    i64 5, label %40
    i64 6, label %46
  ]

16:                                               ; preds = %2
  %17 = load i8*, i8** %4, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 0
  %19 = load i8, i8* %18, align 1
  %20 = sext i8 %19 to i32
  %21 = load i32*, i32** %5, align 8
  store i32 %20, i32* %21, align 4
  store i32 0, i32* %3, align 4
  br label %88

22:                                               ; preds = %2
  %23 = load i8*, i8** %4, align 8
  %24 = getelementptr inbounds i8, i8* %23, i64 0
  %25 = load i8, i8* %24, align 1
  %26 = sext i8 %25 to i32
  %27 = and i32 %26, 31
  store i32 %27, i32* %6, align 4
  br label %55

28:                                               ; preds = %2
  %29 = load i8*, i8** %4, align 8
  %30 = getelementptr inbounds i8, i8* %29, i64 0
  %31 = load i8, i8* %30, align 1
  %32 = sext i8 %31 to i32
  %33 = and i32 %32, 15
  store i32 %33, i32* %6, align 4
  br label %55

34:                                               ; preds = %2
  %35 = load i8*, i8** %4, align 8
  %36 = getelementptr inbounds i8, i8* %35, i64 0
  %37 = load i8, i8* %36, align 1
  %38 = sext i8 %37 to i32
  %39 = and i32 %38, 7
  store i32 %39, i32* %6, align 4
  br label %55

40:                                               ; preds = %2
  %41 = load i8*, i8** %4, align 8
  %42 = getelementptr inbounds i8, i8* %41, i64 0
  %43 = load i8, i8* %42, align 1
  %44 = sext i8 %43 to i32
  %45 = and i32 %44, 3
  store i32 %45, i32* %6, align 4
  br label %55

46:                                               ; preds = %2
  %47 = load i8*, i8** %4, align 8
  %48 = getelementptr inbounds i8, i8* %47, i64 0
  %49 = load i8, i8* %48, align 1
  %50 = sext i8 %49 to i32
  %51 = and i32 %50, 1
  store i32 %51, i32* %6, align 4
  br label %55

52:                                               ; preds = %2
  %53 = load i32, i32* @EINVAL, align 4
  %54 = sub nsw i32 0, %53
  store i32 %54, i32* %3, align 4
  br label %88

55:                                               ; preds = %46, %40, %34, %28, %22
  store i64 1, i64* %8, align 8
  br label %56

56:                                               ; preds = %82, %55
  %57 = load i64, i64* %8, align 8
  %58 = load i64, i64* %7, align 8
  %59 = icmp ult i64 %57, %58
  br i1 %59, label %60, label %85

60:                                               ; preds = %56
  %61 = load i8*, i8** %4, align 8
  %62 = load i64, i64* %8, align 8
  %63 = getelementptr inbounds i8, i8* %61, i64 %62
  %64 = load i8, i8* %63, align 1
  %65 = sext i8 %64 to i32
  %66 = and i32 %65, 192
  %67 = icmp ne i32 %66, 128
  br i1 %67, label %68, label %71

68:                                               ; preds = %60
  %69 = load i32, i32* @EINVAL, align 4
  %70 = sub nsw i32 0, %69
  store i32 %70, i32* %3, align 4
  br label %88

71:                                               ; preds = %60
  %72 = load i32, i32* %6, align 4
  %73 = shl i32 %72, 6
  store i32 %73, i32* %6, align 4
  %74 = load i8*, i8** %4, align 8
  %75 = load i64, i64* %8, align 8
  %76 = getelementptr inbounds i8, i8* %74, i64 %75
  %77 = load i8, i8* %76, align 1
  %78 = sext i8 %77 to i32
  %79 = and i32 %78, 63
  %80 = load i32, i32* %6, align 4
  %81 = or i32 %80, %79
  store i32 %81, i32* %6, align 4
  br label %82

82:                                               ; preds = %71
  %83 = load i64, i64* %8, align 8
  %84 = add i64 %83, 1
  store i64 %84, i64* %8, align 8
  br label %56

85:                                               ; preds = %56
  %86 = load i32, i32* %6, align 4
  %87 = load i32*, i32** %5, align 8
  store i32 %86, i32* %87, align 4
  store i32 0, i32* %3, align 4
  br label %88

88:                                               ; preds = %85, %68, %52, %16
  %89 = load i32, i32* %3, align 4
  ret i32 %89
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i64 @utf8_encoded_expected_len(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
